--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -75,6 +75,10 @@ parachain-info = { git = "https://github.com/paritytech/cumulus.git", branch = "
 parachains-common = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.42", default-features = false }
 
 # Frontier
+fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
+fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
+
+# Frontier FRAME
 pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
 pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "bar/polkadot-v0.9.42", default-features = false }
 pallet-ethereum = { git = "https://github.com/paritytech/frontier.git", branch = "bar/polkadot-v0.9.42", default-features = false }
@@ -82,6 +86,7 @@ pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch =
 pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
 pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
 pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
+pallet-hotfix-sufficients = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
 
 [features]
 default = [
@@ -134,6 +139,9 @@ std = [
 	"xcm-executor/std",
 	"xcm/std",
 	"substrate-wasm-builder",
+	# Frontier
+	"fp-rpc/std",
+	"fp-self-contained/std",
 	# Frontier FRAME
 	"pallet-base-fee/std",
 	"pallet-ethereum/std",
@@ -142,6 +150,7 @@ std = [
 	"pallet-evm-precompile-modexp/std",
 	"pallet-evm-precompile-sha3fips/std",
 	"pallet-evm-precompile-simple/std",
+	"pallet-hotfix-sufficients/std",
 ]
 
 runtime-benchmarks = [
