--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -11,6 +11,7 @@ build = "build.rs"
 
 [dependencies]
 clap = { version = "4.2.3", features = ["derive"] }
+futures = "0.3.25"
 log = "0.4.17"
 codec = { package = "parity-scale-codec", version = "3.0.0" }
 serde = { version = "1.0.160", features = ["derive"] }
@@ -68,7 +69,16 @@ cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus.g
 color-print = "0.3.4"
 
 # Frontier
+fc-cli = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", features = [ "rpc-binary-search-estimate" ] }
+fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fc-db = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fc-storage = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
 fp-evm = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
 
 [build-dependencies]
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
