More clippy fixes and add workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test
 # Controls when the action will run.
 on:
   push:
-    branches: '**'
+    branches: '*'
 
 jobs:
   test:
@@ -38,6 +38,9 @@ jobs:
         run: |
           SKIP_WASM_BUILD=1 cargo check --release
 
-      # # Test code
-      # - name: Test
-      #   run: cargo test
+      - name: Check clippy
+        run: |
+          cargo clippy  --all-targets --workspace --features runtime-benchmarks --features try-runtime
+
+      - name: Run tests
+        run: cargo test
