--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -10,12 +10,13 @@ edition = "2021"
 build = "build.rs"
 
 [dependencies]
-clap = { version = "4.2.3", features = ["derive"] }
+clap = { version = "4.2.7", features = ["derive"] }
 futures = "0.3.25"
 log = "0.4.17"
 codec = { package = "parity-scale-codec", version = "3.0.0" }
 serde = { version = "1.0.163", features = ["derive"] }
 jsonrpsee = { version = "0.16.2", features = ["server"] }
+hex-literal = { version = "0.4.1" }
 
 # Local
 parachain-template-runtime = { path = "../runtime" }
@@ -69,16 +70,16 @@ cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus.g
 color-print = "0.3.4"
 
 # Frontier
-fc-cli = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
-fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", features = [ "rpc-binary-search-estimate" ] }
-fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
-fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
-fc-db = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
-fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
-fc-storage = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
-fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42", default-features = false }
-fp-evm = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
-fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "bar/polkadot-v0.9.42" }
+fc-cli = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", features = [ "rpc-binary-search-estimate" ] }
+fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
 
 [build-dependencies]
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
@@ -89,6 +90,12 @@ runtime-benchmarks = [
 	"try-runtime-cli/try-runtime",
 	"parachain-template-runtime/runtime-benchmarks",
 	"polkadot-cli/runtime-benchmarks",
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-benchmarking-cli/runtime-benchmarks",
+	"polkadot-primitives/runtime-benchmarks",
+	"polkadot-service/runtime-benchmarks",
+	"sc-service/runtime-benchmarks",
+	"sp-runtime/runtime-benchmarks",
 ]
 try-runtime = [
 	"try-runtime-cli/try-runtime",
