--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -11,10 +11,12 @@ build = "build.rs"
 
 [dependencies]
 clap = { version = "4.2.7", features = ["derive"] }
+futures = "0.3.25"
 log = "0.4.17"
 codec = { package = "parity-scale-codec", version = "3.0.0" }
 serde = { version = "1.0.163", features = ["derive"] }
 jsonrpsee = { version = "0.16.2", features = ["server"] }
+hex-literal = { version = "0.4.1" }
 
 # Local
 parachain-template-runtime = { path = "../runtime" }
@@ -68,10 +70,16 @@ cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus.g
 color-print = "0.3.4"
 
 # Frontier
-fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
-fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-cli = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
 fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", features = [ "rpc-binary-search-estimate" ] }
 fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fc-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
+fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43" }
 
 [build-dependencies]
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
