--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -77,7 +77,6 @@ parachains-common = { git = "https://github.com/paritytech/cumulus.git", branch 
 fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 
-
 # Frontier FRAME
 pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
@@ -149,6 +148,10 @@ std = [
 	"pallet-evm-precompile-modexp/std",
 	"pallet-evm-precompile-sha3fips/std",
 	"pallet-evm-precompile-simple/std",
+	"cumulus-pallet-session-benchmarking/std",
+	"frame-benchmarking/std",
+	"frame-system-benchmarking/std",
+	"frame-try-runtime/std"
 ]
 
 runtime-benchmarks = [
@@ -166,6 +169,14 @@ runtime-benchmarks = [
 	"xcm-builder/runtime-benchmarks",
 	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
 	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
+	"cumulus-pallet-parachain-system/runtime-benchmarks",
+	"pallet-ethereum/runtime-benchmarks",
+	"pallet-evm/runtime-benchmarks",
+	"pallet-sudo/runtime-benchmarks",
+	"polkadot-parachain/runtime-benchmarks",
+	"polkadot-primitives/runtime-benchmarks",
+	"polkadot-runtime-common/runtime-benchmarks",
+	"xcm-executor/runtime-benchmarks",
 ]
 
 try-runtime = [
@@ -193,5 +204,8 @@ try-runtime = [
 	"pallet-ethereum/try-runtime",
   	"pallet-base-fee/try-runtime",
 	"fp-self-contained/try-runtime",
+	"frame-support/try-runtime",
+	"polkadot-runtime-common/try-runtime",
+	"sp-runtime/try-runtime",
 ]
 
