--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./localbuild.Dockerfile
+          file: ./local.Dockerfile
           push: true
           tags: ${{ env.DOCKER_REPO }}:${{ github.sha }}
