make test inside the build job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,11 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }} 
- 
-      # Check the build
+
+      - name: Test
+        run: |
+          cargo test --release
+
       - name: Build
         run: |
           cargo build --release
@@ -52,7 +55,7 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       # create Docker image and push to Docker Hub
-      - name: Build and push Docker images
+      - name: Push Docker images
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -91,35 +94,5 @@ jobs:
         run: |
           cargo clippy --all-targets --workspace --features runtime-benchmarks --features try-runtime
 
-  test:
-    runs-on: ubuntu-22.04
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
-      - uses: actions/checkout@v3
-
-      - name: Install linux dependencies
-        run: sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
-
-      - name: Install Rust
-        run: |
-          rustup update stable --no-self-update
-          rustup target add wasm32-unknown-unknown
-          rustup component add clippy
-
-       # Caching paths to speed up builds
-      - name: Cache Paths
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }} 
- 
-      - name: Test
-        run: |
-          cargo test
 
 
