--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ env:
 
 jobs:
   test_build_and_push:
-    runs-on: 
-      group: LAOS-runners
+    runs-on: ubuntu-latest-8-cores
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
@@ -65,8 +64,7 @@ jobs:
           tags: ${{ env.DOCKER_REPO }}:${{ github.sha }}
 
   lint:
-    runs-on: 
-      group: LAOS-runners
+    runs-on: ubuntu-latest-8-cores
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
