--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   test_build_and_push:
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-22.04-32Cores-16GB
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
@@ -64,7 +64,7 @@ jobs:
           tags: ${{ env.DOCKER_REPO }}:${{ github.sha }}
 
   lint:
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-22.04-32Cores-16GB
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
