--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,8 @@ jobs:
 
   lint:
     runs-on: 
-      labels: ubuntu-22.04-8cores
+      group: laos
+      labels: ubuntu-16-cores
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
