--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,23 +13,18 @@ env:
   DOCKER_REPO: freeverseio/laos-ownership-node
 
 jobs:
-  build_and_push:
+  build:
     runs-on: 
       group: laos
       labels: ubuntu-16-cores
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
-
       - name: Install linux dependencies
         run: sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
-
       - name: Install Rust
         run: |
           rustup update stable --no-self-update
           rustup target add wasm32-unknown-unknown
-
-       # Caching paths to speed up builds
       - name: Cache Paths
         uses: actions/cache@v3
         with:
@@ -39,20 +34,21 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }} 
-
+          key: ${{ runner.os }}-cargo-build_and_push-${{ hashFiles('**/Cargo.lock') }} 
+      - name: Check
+        run: |
+          SKIP_WASM_BUILD=1 cargo check --release
+        if: github.event_name == 'pull_request'
       - name: Build
         run: |
           cargo build --release
-
-      # Login to Docker hub using the credentials stored in the repository secrets
+        if: github.event_name == 'push'
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.1.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-
-      # create Docker image and push to Docker Hub
+        if: github.event_name == 'push'
       - name: Push Docker images
         uses: docker/build-push-action@v4
         with:
@@ -60,6 +56,7 @@ jobs:
           file: ./local.Dockerfile
           push: true
           tags: ${{ env.DOCKER_REPO }}:${{ github.sha }}
+        if: github.event_name == 'push'
 
   lint:
     runs-on: 
@@ -88,7 +85,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }} 
+          key: ${{ runner.os }}-cargo-lint-${{ hashFiles('**/Cargo.lock') }} 
  
       - name: Check clippy
         run: |
@@ -120,7 +117,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }} 
+          key: ${{ runner.os }}-cargo-test-${{ hashFiles('**/Cargo.lock') }} 
  
       - name: Test
         run: |
