--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ env:
   DOCKER_REPO: freeverseio/laos-ownership-node
 
 jobs:
-  build:
+  cargo_check:
+    if: github.event_name == 'pull_request'
     runs-on: 
       group: laos
       labels: ubuntu-16-cores
@@ -38,17 +39,38 @@ jobs:
       - name: Check
         run: |
           SKIP_WASM_BUILD=1 cargo check --release
-        if: github.event_name == 'pull_request'
+
+  build_and_push:
+    if: github.event_name == 'push'
+    runs-on: 
+      group: laos
+      labels: ubuntu-16-cores
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install linux dependencies
+        run: sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
+      - name: Install Rust
+        run: |
+          rustup update stable --no-self-update
+          rustup target add wasm32-unknown-unknown
+      - name: Cache Paths
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-build_and_push-${{ hashFiles('**/Cargo.lock') }} 
       - name: Build
         run: |
           cargo build --release
-        if: github.event_name == 'push'
       - name: Log in to Docker Hub
         uses: docker/login-action@v2.1.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-        if: github.event_name == 'push'
       - name: Push Docker images
         uses: docker/build-push-action@v4
         with:
@@ -56,7 +78,6 @@ jobs:
           file: ./local.Dockerfile
           push: true
           tags: ${{ env.DOCKER_REPO }}:${{ github.sha }}
-        if: github.event_name == 'push'
 
   lint:
     runs-on: 
