--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches: [main, dev]
   pull_request:
+    types: [opened, synchronize]
     branches: [main, dev]
   workflow_dispatch:
 
