--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -8,10 +8,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v3
     - name: Install linux dependencies
+      shell: bash
       run: sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
     - name: Install Rust
+      shell: bash
       run: |
         rustup update stable --no-self-update
         rustup target add wasm32-unknown-unknown
