--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ name: Release
 on:
   # Triggers the workflow on push events for tags only
   push:
+    branches:
+      - main
     tags:
       - 'v*.*.*'
 
