--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,51 @@ members = [
 	"precompiles/*",
 ]
 
+[workspace.package]
+authors = ["Freeverse"]
+
 [workspace.dependencies]
 
-
+# Substrate utils
 parity-scale-codec = { version = "3.2.2", default-features = false, features = [
 	"derive",
 ] }
 scale-info = { version = "2.0", default-features = false, features = [
 	"derive",
 ] }
+
+# Frontier
+evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
+fp-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
+pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.43", default-features = false }
+
+# Polkadot/xcm
+xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "polkadot-v0.9.43" }
+
+# Substrate
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
+
+# Precompile utils
+precompile-utils-macro = { path = "./precompiles/utils/macro", default-features = false }
+precompile-utils = { path = "./precompiles/utils", default-features = false }
+
+# Other (wasm)
+affix = "0.1.2"
+async-trait = { version = "0.1.42" }
+derive_more = "0.99"
+environmental = { version = "1.1.2", default-features = false }
+hex = { version = "0.4.3", default-features = false }
+hex-literal = { version = "0.3.4" }
+impl-trait-for-tuples = "0.2.1"
+log = { version = "0.4", default-features = false }
+num_enum = { version = "0.5.3", default-features = false }
+paste = "1.0.6"
+serde = { version = "1.0.101", default-features = false }
+sha3 = { version = "0.10", default-features = false }
+similar-asserts = "1.1.0"
+
