--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -86,6 +86,7 @@ pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch =
 pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
 pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", default-features = false }
+pallet-living-assets-ownership = { path = "./precompiles/pallet-living-assets-ownership", default-features = false }
 
 [features]
 default = [
@@ -152,7 +153,8 @@ std = [
 	"cumulus-pallet-session-benchmarking/std",
 	"frame-benchmarking",
 	"frame-system-benchmarking",
-	"frame-try-runtime"
+	"frame-try-runtime",
+	"pallet-living-assets-ownership/std",
 ]
 
 runtime-benchmarks = [
